--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,12 @@ header {
   width: 295px; /* This value should be counted by JS */
   padding: 0 10px;
 }
-.carousel-container .carousel-item .discount-item {
+.carousel-container .carousel-item .product-item {
+  min-height: 470px;
+}
+
+/* Product Item */
+.product-item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -298,14 +303,26 @@ header {
   background-color: #fff;
   position: relative;
   width: 100%;
-  min-height: 470px;
+  height: 100%;
   transition: transform .3s ease;
 }
-.carousel-container .carousel-item .discount-item:hover {
+.product-item:hover {
   box-shadow: 0 8px 32px 0 rgba(0,0,0,.1);
   transform: translateY(-5px);
 }
-.discount-item .wish-or-compare {
+.product-item .sale-item {
+  background-color: #6dab3c;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-family: Arial, Tahoma, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 5px 7px;
+  color: #FFFFFF;
+  opacity: .8;
+}
+.product-item .wish-or-compare {
   position: absolute;
   top: 10px;
   left: 10px;
@@ -317,23 +334,23 @@ header {
   box-shadow: 1px 1px 2px 1px rgba(0,0,0,.1), -1px -1px 1px 1px rgba(247,251,255,.5), 3px 3px 8px 2px rgba(0,0,0,0) inset;
   z-index: 2;
 }
-.discount-item .wish-or-compare .wish-item,
-.discount-item .wish-or-compare .compare-item {
+.product-item .wish-or-compare .wish-item,
+.product-item .wish-or-compare .compare-item {
   color: #AAAAAA;
   opacity: .7;
   cursor: pointer;
 }
-.discount-item .wish-or-compare .wish-item:hover {
+.product-item .wish-or-compare .wish-item:hover {
   color: #c00;
   opacity: 1;
 }
-.discount-item .wish-or-compare .compare-item:hover {
+.product-item .wish-or-compare .compare-item:hover {
   opacity: 1;
 }
-.discount-item .item-info {
+.item-info {
   display: flex;
   flex-direction: column;
-  padding: 30px 12px 0 12px;
+  padding: 30px 12px 18px 12px;
 }
 .item-info .product-picture {
   align-self: center;
@@ -344,6 +361,18 @@ header {
   text-transform: uppercase;
   color: #555555;
   font-size: 11px;
+  position: relative;
+}
+.category-name .expired {
+  background-color: #888885;
+  font-size: 11px;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  line-height: 17px;
+  padding: 0 4px;
+  position: absolute;
+  right: -7px;
+  top: -24px;
 }
 .item-info .product-name {
   position: relative;
@@ -387,7 +416,7 @@ header {
 }
 .product-params {
   padding-top: 10px;
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid #EEEEEE;
 }
 .product-params li {
   list-style: disc outside none;
@@ -405,6 +434,12 @@ header {
 }
 .product-additional-info .product-price {
   margin-right: 12px;
+}
+.product-price .previous-price {
+  font-size: 14px;
+  color: rgba(17, 17, 17, .3);
+  text-decoration: line-through;
+  line-height: 19px;
 }
 .product-price .current-price {
   font-size: 17px;
@@ -438,7 +473,7 @@ section.product-listing .products-list-container {
   padding: 10px;
 }
 .products-list-container .listing-description {
-  margin: 18px auto 0;
+  margin: 18px auto 30px;
   padding: 12px;
   border-top: 1px solid #dbdbdb;
   text-align: center;
@@ -446,4 +481,76 @@ section.product-listing .products-list-container {
   color: #a8a8a8;
   font-size: 15px;
   line-height: 18px;
+}
+.tabs-container {
+  position: relative;
+  margin-bottom: 18px;
+}
+.tabs-container .tabs-headings {
+  display: flex;
+  border-bottom: 1px solid #EEEEEE;
+  margin-bottom: 18px;
+}
+.tabs-container .tabs-headings span.tab-title {
+  font-size: 15px;
+  line-height: 16px;
+  transition: color ease .3s;
+  padding: 12px 16px;
+}
+.tab-content {
+  display: none;
+}
+.tab-content.active-tab {
+  display: flex;
+  flex-wrap: wrap;
+}
+.listing .tab-content.active-tab {
+  margin: 0 -12px;
+}
+.tab-listing-item {
+  width: 20%;
+  padding: 0 12px 24px;
+}
+.tab-listing-item .product-params li {
+  list-style: none;
+  margin-left: 0;
+  font-size: 13px;
+  color: #333333;
+  line-height: 15px;
+}
+.tab-listing-item .product-params li span {
+  color: #999999;
+}
+
+/* Video Section */
+section.info-section {
+  background: #0C0C0C url('../assets/images/ripover.png') no-repeat top center;
+  padding-top: 120px;
+  position: relative;
+}
+section.info-section .content-wrapper {
+  position: relative;
+  z-index: 2;
+}
+.info-section .section-heading {
+  color: #FFFFFF;
+}
+.info-section .sub-heading {
+  color: #cecece;
+}
+.video-content {
+  padding: 24px 0 84px;
+  position: relative;
+}
+section.info-section .bottom-animated {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+
+/* News Reviews Section */
+.news-reviews-container {
+  padding: 40px 0;
 }
