--- a/css/styles.css
+++ b/css/styles.css
@@ -229,11 +229,11 @@ header {
   line-height: 34px;
   padding-bottom: 10px;
 }
-.slogan {
+.search-compare-holder .slogan {
   padding-bottom: 10px;
   font-size: 16px;
 }
-.search-box {
+.search-compare-holder .search-box {
   padding: 25px 0;
   display: flex;
 }
@@ -260,7 +260,7 @@ header {
   font-weight: 700;
   font-family: Arial, Tahoma, sans-serif;
 }
-.alternative a {
+.search-compare-holder .alternative a {
   color: #efa61f;
 }
 
@@ -303,171 +303,10 @@ header {
   float: left;
   width: 294px; /* This value should be counted by JS */
   padding: 0 10px;
+  display: flex;
 }
 .carousel-container .carousel-item .product-item {
   min-height: 470px;
-}
-
-/* Product Item */
-.product-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding-top: 12px;
-  border: 1px solid #e2e2e2;
-  background-color: #fff;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform .3s ease;
-}
-.product-item:hover {
-  box-shadow: 0 8px 32px 0 rgba(0,0,0,.1);
-  transform: translateY(-5px);
-}
-.product-item .sale-item {
-  background-color: #6dab3c;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  font-family: Arial, Tahoma, sans-serif;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 5px 7px;
-  color: #FFFFFF;
-  opacity: .8;
-}
-.product-item .wish-or-compare {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  display: flex;
-  flex-direction: column;
-  background: rgba(255,255,255,.78);
-  border-radius: 104px;
-  padding: 8px;
-  box-shadow: 1px 1px 2px 1px rgba(0,0,0,.1), -1px -1px 1px 1px rgba(247,251,255,.5), 3px 3px 8px 2px rgba(0,0,0,0) inset;
-  z-index: 2;
-}
-.product-item .wish-or-compare .wish-item,
-.product-item .wish-or-compare .compare-item {
-  color: #AAAAAA;
-  opacity: .7;
-  cursor: pointer;
-}
-.product-item .wish-or-compare .wish-item:hover {
-  color: #c00;
-  opacity: 1;
-}
-.product-item .wish-or-compare .compare-item:hover {
-  opacity: 1;
-}
-.item-info {
-  display: flex;
-  flex-direction: column;
-  padding: 30px 12px 18px 12px;
-}
-.item-info figure.product-picture {
-  align-self: center;
-  margin-bottom: 12px;
-  text-align: center;
-}
-.product-picture .picture-link {
-  display: block;
-}
-.item-info .category-name {
-  text-transform: uppercase;
-  color: #555555;
-  font-size: 11px;
-  position: relative;
-}
-.category-name .expired {
-  background-color: #888885;
-  font-size: 11px;
-  color: #FFFFFF;
-  text-transform: uppercase;
-  line-height: 17px;
-  padding: 0 4px;
-  position: absolute;
-  right: -7px;
-  top: -24px;
-}
-.item-info .product-name {
-  position: relative;
-  padding: 10px 0 15px 25px;
-  font-size: 18px;
-  font-weight: 400;
-  overflow: hidden;
-  width: 100%;
-}
-.item-info .product-name a {
-  white-space: nowrap;
-  display: block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.item-info .product-name i {
-  position: absolute;
-  color: #ca212a;
-  left: 0;
-  top: 8px;
-  font-size: 22px;
-}
-.item-info .product-rate {
-  display: flex;
-  align-items: center;
-  padding-bottom: 6px;
-  cursor: default;
-}
-.item-info .product-rate .rate-star {
-  color: #e0dadf;
-  font-size: 19px;
-  line-height: 22px;
-}
-.item-info .product-rate .rate-star.active {
-  color: #ff8a00;
-}
-.item-info .best-deal {
-  padding-bottom: 12px;
-  font-size: 13px;
-  color: #808080;
-}
-.product-params {
-  padding-top: 10px;
-  border-top: 1px solid #EEEEEE;
-}
-.product-params li {
-  list-style: disc outside none;
-  margin-left: 15px;
-  font-size: 13px;
-  color: #333333;
-  line-height: 15px;
-}
-.product-additional-info {
-  padding: 12px;
-  border-top: 1px solid #EEEEEE;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.product-additional-info .product-price {
-  margin-right: 12px;
-}
-.product-price .previous-price {
-  font-size: 14px;
-  color: rgba(17, 17, 17, .3);
-  text-decoration: line-through;
-  line-height: 19px;
-}
-.product-price .current-price {
-  font-size: 17px;
-  color: #f04057;
-  font-weight: 700;
-  line-height: 20px;
-}
-.product-additional-info .more a {
-  color: #009700;
-  font-size: 14px;
 }
 
 /* Section Slogan */
@@ -732,416 +571,4 @@ footer .footer-content {
   background-color: #5eb936;
   padding: 12px 10px;
   margin: 0;
-}
-
-
-/* Media queries for responsive layout */
-@media screen and (max-width: 1255px) {
-  .header-container a.logo {
-    margin-left: 12px;
-  }
-  .discounts-container {
-    padding: 30px 0 36px;
-  }
-  .discounts-carousel {
-    max-width: 882px;
-    margin: 0 auto;
-  }
-  .listing .tab-content.active-tab {
-    margin: 0 -6px;
-  }
-  .listing .tab-content.active-tab .tab-listing-item {
-    padding: 0 6px 24px;
-  }
-  .video-content {
-    padding-left: 10%;
-    padding-right: 10%;
-  }
-  .video-content iframe {
-    height: 525px;
-  }
-  .news-reviews-content {
-    padding: 0 12px;
-  }
-  .news-reviews-list {
-    margin: 0 -6px;
-  }
-  .news-reviews-list .news-review-item {
-    margin: 0 6px 24px;
-  }
-  footer .footer-content {
-    margin: 0;
-  }
-  .newsletter-input button.newsletter-subscribe {
-    min-width: 114px;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .tab-listing-item {
-    width: 25%;
-  }
-  .video-content iframe {
-    height: 425px;
-  }
-  .news-reviews-title h6 {
-    font-size: 15px;
-  }
-  .newsletter-input button.newsletter-subscribe {
-    min-width: inherit;
-  }
-}
-
-@media screen and (max-width: 923px) {
-  .header-container {
-    height: 40px;
-  }
-  .header-container a.logo { margin-left: 18px }
-  .header-container .mobile-menu {
-    display: flex;
-    opacity: 1;
-    height: auto;
-    color: #FFFFFF;
-    font-size: 28px;
-    margin-right: 18px;
-    cursor: pointer;
-  }
-  .header-container .header-navigation {
-    display: none;
-  }
-  .header-container #mobile-menu-trigger:checked + .header-navigation {
-    display: block;
-    position: fixed;
-    left: 0;
-    top: 40px;
-    width: 100%;
-    background-color: #f6f6f6;
-    padding: 0 12px;
-    z-index: 5;
-  }
-  .header-container #mobile-menu-trigger:checked ~ .mobile-menu-overlay {
-    display: block;
-    position: fixed;
-    opacity: .4;
-    height: 100%;
-    width: 100%;
-    top: 40px;
-    left: 0;
-    background-color: #000000;
-    z-index: 3;
-  }
-  .header-navigation .nav-container {
-    height: auto;
-  }
-  .nav-container > li {
-    padding: 12px;
-  }
-  .nav-container > li > a {
-    color: #333333;
-    padding: 0;
-  }
-  .discounts-carousel {
-    max-width: 588px;
-  }
-  .search-and-compare .content-wrapper {
-    max-width: 600px;
-  }
-}
-
-@media screen and (max-width: 838px) {
-  .tracking-info-slogan {
-    padding: 24px;
-  }
-  .products-list-container .listing-description {
-    width: 65%;
-    margin: 18px auto;
-  }
-  .tab-listing-item {
-    width: 33.3%;
-  }
-  .video-content iframe {
-    height: 364px;
-  }
-  .news-reviews-list {
-    flex-wrap: wrap;
-  }
-  .news-reviews-list .news-review-item {
-    flex: auto;
-    width: calc(50% - 12px);
-  }
-  footer .footer-content {
-    padding: 0 6px;
-  }
-  .footer-content .footer-item {
-    margin: 0 6px;
-    padding: 0;
-  }
-  .newsletter-input input {
-    font-size: 14px;
-    padding: 12px 0 12px 6px;
-  }
-  .newsletter-input button.newsletter-subscribe {
-    padding: 12px 6px;
-    font-size: 15px;
-    font-weight: 400;
-  }
-}
-
-@media screen and (max-width: 738px) {
-  .nav-container > li {
-    padding: 12px 6px;
-  }
-  .nav-container > li > a {
-    font-size: 14px;
-  }
-  .nav-container > li > a i {
-    margin: 5px 0 0 3px;
-  }
-  .nav-container > li > ul.sub-menu li a {
-    font-size: 14px;
-    padding: 12px;
-  }
-  .tab-listing-item {
-    width: 50%;
-  }
-  .video-content iframe {
-    height: 320px;
-  }
-  footer {
-    padding: 24px 0 36px;
-  }
-  footer .footer-content {
-    padding: 0 18px;
-    flex-wrap: wrap;
-  }
-  .footer-content .footer-item {
-    margin: 0;
-    padding: 0 0 18px 0;
-  }
-  .footer-content .footer-item:last-child {
-    padding: 0;
-    flex: auto;
-  }
-  .footer-item h5 {
-    padding-bottom: 12px;
-  }
-  .newsletter-input input {
-    font-size: 15px;
-    padding: 12px;
-  }
-  .newsletter-input button.newsletter-subscribe {
-    font-size: 16px;
-    font-weight: 700;
-    min-width: 150px;
-    padding: 12px;
-  }
-}
-
-@media screen and (max-width: 616px) {
-  .search-and-compare .content-wrapper {
-    max-width: 400px;
-  }
-  .search-compare-holder {
-    padding: 0;
-  }
-  .search-box label input {
-    height: 42px;
-    width: 100%;
-    padding: 0 0 0 18px;
-    font-size: 16px;
-  }
-  .search-box button.search-button {
-    padding: 0 24px;
-  }
-  .discounts-carousel {
-    max-width: 294px;
-  }
-  .products-list-container .listing-description {
-    width: 85%;
-  }
-  .tabs-container .tabs-headings span.tab-title {
-    font-size: 14px;
-    line-height: 15px;
-    padding: 8px 0;
-    margin-right: 24px;
-  }
-  .tabs-container .tabs-headings span.tab-title:last-child {
-    margin-right: 0;
-  }
-  .video-content {
-    padding-left: 5%;
-    padding-right: 5%;
-  }
-  .video-content iframe {
-    height: 282px;
-  }
-  .latest-news .latest-news-title {
-    font-size: 11px;
-    margin-right: 0;
-    padding: 3px 6px;
-    white-space: nowrap;
-  }
-  .latest-articles li {
-    padding: 0 0 2px 0;
-  }
-  .latest-articles li a {
-    font-size: 14px;
-  }
-}
-
-@media screen and (max-width: 555px) {
-  .header-navigation .nav-container {
-    flex-wrap: wrap;
-  }
-  .nav-container > li {
-    order: 3;
-    flex-basis: 50%;
-    justify-content: center;
-  }
-  .nav-container > li:first-child {
-    order: 1;
-  }
-  .nav-container > li:last-child {
-    order: 2;
-  }
-  .nav-container li:hover > ul.sub-menu {
-    min-width: 100%;
-  }
-  .products-list-container .listing-description {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .header-container #mobile-menu-trigger:checked + .header-navigation {
-    padding: 0 6px;
-  }
-  .nav-container > li {
-    padding: 12px 0;
-  }
-  .nav-container > li > a {
-    white-space: nowrap;
-    letter-spacing: -0.6px;
-  }
-  .tracking-info-slogan {
-    padding: 18px;
-  }
-  .tracking-info-slogan h3 {
-    font-size: 20px;
-  }
-  .discounts-container {
-    padding: 30px 0 12px;
-  }
-  section.product-listing {
-    padding-top: 18px;
-  }
-  .tabs-container .tabs-headings {
-    margin-bottom: 12px;
-  }
-  .tabs-container .tabs-headings span.tab-title {
-    margin-right: 18px;
-  }
-  .listing .tab-content.active-tab {
-    margin: 0;
-  }
-  .listing .tab-content.active-tab .tab-listing-item {
-    padding: 0 12px 24px;
-    width: 100%;
-  }
-  .video-content {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .video-content iframe {
-    height: 250px;
-  }
-  .latest-news .latest-news-title {
-    font-size: 10px;
-  }
-  .latest-news-items button.switch-button {
-    padding: 0;
-  }
-  .latest-news-items button.switch-button:first-of-type {
-    margin-left: 6px;
-  }
-  .latest-news-items button.switch-button:last-of-type {
-    margin-right: 6px;
-  }
-  .latest-articles li a {
-    font-size: 13px;
-    display: block;
-    height: 18px;
-    overflow: hidden;
-  }
-  .news-review-item .news-reviews-banner {
-    margin-bottom: 12px;
-  }
-  .news-review-item .news-reviews-title {
-    padding: 0 12px 42px;
-  }
-  .news-reviews-title .type {
-    left: 12px;
-    bottom: 12px;
-  }
-  .footer-content .footer-item {
-    flex: auto;
-  }
-  .footer-item p {
-    padding-bottom: 0;
-  }
-  .footer-item .footer-links {
-    justify-content: space-between;
-  }
-  .footer-links .footer-info {
-    display: flex;
-    flex-wrap: wrap;
-    flex: 1;
-    flex-direction: row;
-    align-items: stretch;
-    align-self: flex-start;
-  }
-  .footer-item h5 {
-    padding-bottom: 8px;
-    flex-basis: 100%;
-  }
-  .footer-info a {
-    margin-bottom: 6px;
-    margin-right: 12px;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .search-and-compare .content-wrapper {
-    max-width: 360px;
-  }
-  .search-compare-holder h2 {
-    font-size: 34px;
-    line-height: 28px;
-  }
-  .search-box label input {
-    height: 39px;
-    width: 100%;
-    padding: 0 0 0 12px;
-    font-size: 15px;
-  }
-  .tabs-container .tabs-headings span.tab-title {
-    margin-right: 12px;
-    font-size: 13px;
-  }
-  .video-content {
-    padding: 18px 0 54px;
-  }
-  .video-content iframe {
-    height: 206px;
-  }
-  .news-reviews-list {
-    margin: 0;
-  }
-  .news-reviews-list .news-review-item {
-    width: 100%;
-    margin: 0 0 24px 0;
-  }
-  .newsletter-input button.newsletter-subscribe {
-    min-width: 120px;
-  }
 }
