--- a/css/product-category.css
+++ b/css/product-category.css
@@ -1,4 +1,11 @@
 /* Product Category page layout styles */
+.page-container {
+  display: flex;
+  flex-direction: column;
+}
+footer {
+  margin-top: auto;
+}
 .product-category .category-content {
   padding: 20px 0;
   display: flex;
@@ -11,19 +18,6 @@
 }
 .category-content .sidebar {
   width: 28%;
-}
-.category-content .main-content nav.breadcrumbs {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  padding-bottom: 30px;
-}
-nav.breadcrumbs .separator {
-  margin: 0 12px;
-  line-height: 17px;
-}
-nav.breadcrumbs a:hover {
-  text-decoration: underline;
 }
 .category-content .main-content h1.category-name {
   font-size: 28px;
