--- a/css/styles.css
+++ b/css/styles.css
@@ -66,11 +66,17 @@ ul {
 input, button {
   outline: none;
 }
+input[hidden] {
+  opacity: 0;
+  height: 0;
+  visibility: hidden;
+}
 button {
   border: none;
   box-shadow: none;
   text-shadow: none;
   cursor: pointer;
+  background-color: transparent;
 }
 
 /* page containers styles */
@@ -320,6 +326,32 @@ header {
   font-size: 22px;
   font-weight: 400;
   line-height: 1;
+}
+
+/* Breadcrumbs styles */
+nav.breadcrumbs {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  padding-bottom: 30px;
+}
+nav.breadcrumbs .separator {
+  margin: 0 12px;
+  line-height: 17px;
+}
+nav.breadcrumbs a:hover {
+  text-decoration: underline;
+}
+nav.breadcrumbs a.breadcrumbs-link {
+  background-color: #f5f5f5;
+  padding: 4px 8px;
+  border-radius: 3px;
+  transition: background-color ease .3s;
+}
+nav.breadcrumbs a.breadcrumbs-link:hover {
+  text-decoration: none;
+  background-color: #eaeaea;
+  transition: background-color ease .3s;
 }
 
 /* Section Products Listing */
