--- a/css/product-details.css
+++ b/css/product-details.css
@@ -7,7 +7,7 @@ header.extra-header {
   transform: translateY(-73px);
   opacity: 0;
   visibility: hidden;
-  transition: transform .5s linear, height .4s linear .2s, opacity .6s ease-out .3s;
+  transition: transform .6s linear .1s, height 1s linear .7s, opacity .4s ease-out; /* Hide animation */
   position: fixed;
   left: 0;
   top: 0;
@@ -22,7 +22,7 @@ body.scrolled header.extra-header {
   opacity: 1;
   height: 73px;
   transform: translateY(0);
-  transition: transform .5s linear .2s, height .2s linear .6s, opacity .4s ease-out;
+  transition: transform .6s linear .1s, height .2s linear, opacity .4s ease-out .3s; /* Show animation */
 }
 footer {
   margin-top: auto;
@@ -191,14 +191,10 @@ figure.main-prod-picture a {
   width: 100px;
   height: 100px;
 }
-.rating-circle .rating-bg,
-.rating-bg .fill-rate,
-.rating-bg .fill-rate .fill-out {
+.rating-circle .rating-bg {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-}
-.rating-circle .rating-bg {
   background-color: rgba(239, 239, 239, .63);
   position: relative;
 }
@@ -220,23 +216,36 @@ figure.main-prod-picture a {
   font-size: 40px;
   line-height: 40px;
 }
-.rating-bg .fill-rate,
+.rating-bg .fill-rate {
+  position: absolute;
+  backface-visibility: hidden;
+  transform: none;
+  transition: transform 1s linear 1s;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  clip: rect(0px, 100px, 100px, 50px);
+  z-index: 2;
+}
 .rating-bg .fill-rate .fill-out {
   position: absolute;
   backface-visibility: hidden;
   transform: none;
   transition: transform 1s linear 1s;
-}
-.rating-bg .fill-rate {
-  clip: rect(0px, 100px, 100px, 50px);
-  z-index: 2;
-}
-.rating-bg .fill-rate .fill-out {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
   background-color: #e43917;
   clip: rect(0px, 50px, 100px, 0px);
 }
-.rating-bg .fill-rate.full,
-.rating-bg .fill-rate.full .fill-out,
+.rating-bg .fill-rate.full {
+  transform: rotate(150deg);
+  border-spacing: 150px;
+}
+.rating-bg .fill-rate.full .fill-out {
+  transform: rotate(150deg);
+  border-spacing: 150px;
+}
 .rating-bg .fill-rate.half .fill-out {
   transform: rotate(150deg);
   border-spacing: 150px;
@@ -384,7 +393,7 @@ figure.main-prod-picture a {
   overflow: hidden;
   padding: 18px;
   max-height: 99999px;
-  transition: padding-top .2s linear, padding-bottom .2s linear, opacity .3s ease-in .1s, max-height .2s linear;
+  transition: padding-top .2s linear, padding-bottom .2s linear, opacity .3s ease-out .3s, max-height .4s linear .2s; /* Open animation */
 }
 .details-block input.hide-details:checked + h4 label.details-toggle i {
   transform: rotateX(180deg);
@@ -395,7 +404,7 @@ figure.main-prod-picture a {
   opacity: 0;
   padding-top: 0;
   padding-bottom: 0;
-  transition: padding-top .2s linear, padding-bottom .2s linear, opacity .3s ease-out .1s, max-height .2s linear;
+  transition: padding-top .2s linear, padding-bottom .2s linear, opacity .3s ease-out, max-height .2s linear .1s; /* Close animation */
 }
 .details-block .details-toggle-content .store-offer {
   display: flex;
